nix/k8s-resources/modules/cilium/hubble/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  hostnames:
    - "hubble.misumi-sumi.com"
  parentRefs:
    - name: public-gateway
      namespace: kube-system
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
